# monitor

./: README.md  deno.json
api/: deno.json  main.ts
api/src/: endpoints.ts  kv.ts
api/types/: data.d.ts
api/utils/: db_dump.ts  db_reset.ts
tracker/: .gitignore  Cargo.toml  README.md  deno.json  index.html  package.json  vite.config.ts
tracker/src/: main.rs  main.ts  store.ts  styles.css
tracker/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
tracker/src-tauri/src/: config.rs  lib.rs  listener.rs  main.rs  tracker.rs
tracker/src/types/: config.d.ts
utils/: keygen.ts
