[package]
name = "tracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# https://v2.tauri.app/concept/size/
[profile.dev]
incremental = true

[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5.3"
reqwest = {version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
ts-rs = "11.0.1"
tauri-plugin-store = "2"
